added payment component

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My React App</title>
 </head>
+
 <body>
     <div id="root"></div>
+    <script src="https://www.paypal.com/sdk/js?client-id=AUbYvcezyeaWpJsp9e92YKgDgTgmRwWCBx35_FILM3c4m3HMJJNYl8sGV8e4jNzKE6BMRRoWsuOb1cHF"></script>
 </body>
+
 </html>
